--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -23,5 +23,5 @@ spring:
       ddl-auto: update # 개발 환경: update
 
   fastapi:
+    base-url: "http://localhost:8000"
     url: "http://localhost:8000/recommend/emotion"
-
