[FEAT] OAuth2 리소스 서버 의존성 추가
- build.gradle에 OAuth2 리소스 서버 기능을 위한 spring-boot-starter-oauth2-resource-server 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	// OAuth
+	// OAuth Resource Server
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 }
 
 tasks.named('test') {
