--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,11 @@ jwt:
   secret: ${JWT_SECRET}
   access-exp-ms: ${JWT_ACCESS_EXP_MS}
   refresh-exp-ms: ${JWT_REFRESH_EXP_MS}
+  cookie:
+    access-name: ACCESS_TOKEN
+    refresh-name: REFRESH_TOKEN
+    same-site: None
+    secure: true
   access:
     header: Authorization
 
