chore(monorepo): github issue forms 템플릿 수정 및 AGENTS 문서 업데이트
- conventional-request.yml에서 type 필드 이름 및 설명 수정
- AGENTS.md 수정: allowed commit type에 chore와 docs 추가
- 프로젝트 전반의 커밋 규칙과 github issue forms간 일관성 유지 목적

--- a/.github/ISSUE_TEMPLATE/conventional-request.yml
+++ b/.github/ISSUE_TEMPLATE/conventional-request.yml
@@ -13,14 +13,16 @@ body:
         - 참고: https://www.conventionalcommits.org/en/v1.0.0/
 
   - type: dropdown
-    id: type
+    id: commit_type
     attributes:
-      label: Type
+      label: Commit Type
       description: 요청 작업의 커밋 타입을 선택하세요.
       options:
         - feat
         - fix
         - refactor
+        - chore
+        - docs
     validations:
       required: true
 
@@ -50,8 +52,8 @@ body:
     id: cc_title
     attributes:
       label: Conventional Title
-      description: `type(scope): summary` 형식으로 작성하세요.
-      placeholder: feat(frontend): add loading state to login button
+      description: "`type(scope): summary` 형식으로 작성하세요."
+      placeholder: "feat(frontend): add loading state to login button"
     validations:
       required: true
 
@@ -99,5 +101,3 @@ body:
         - 관련 이슈:
         - 관련 PR:
         - 참고 문서:
-    validations:
-      required: false
