feat(ai): 모델 검증 스크립트 및 빌드 검증 로직 추가
- 모델 파일 검증을 위한 ensure-ai-model.sh 스크립트 추가
- Dockerfile에 모델 파일 검증 및 LFS 포인터 감지 로직 추가
- AI 컨테이너 빌드 및 실행 전 모델 상태 확인 자동화
- README.md에 모델 관리 및 에러 대응 관련 가이드 추가
- 모델 파일 관련 잠재적 에러를 방지하여 안정적 개발 환경 지원

--- a/apps/ai/Dockerfile
+++ b/apps/ai/Dockerfile
@@ -8,6 +8,23 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
+RUN set -eu; \
+    MODEL_FILE="models/0717_kobert_5_emotion_model/model.safetensors"; \
+    if [ ! -f "${MODEL_FILE}" ]; then \
+      echo "[AI build] 모델 파일이 없습니다: ${MODEL_FILE}"; \
+      exit 1; \
+    fi; \
+    if head -n 1 "${MODEL_FILE}" | grep -q "git-lfs.github.com/spec/v1"; then \
+      echo "[AI build] LFS 포인터 파일 감지: ${MODEL_FILE}"; \
+      echo "로컬에서 'git lfs pull --include=\"apps/ai/models/0717_kobert_5_emotion_model/model.safetensors\"' 후 다시 빌드하세요."; \
+      exit 1; \
+    fi; \
+    SIZE_BYTES="$(wc -c < "${MODEL_FILE}")"; \
+    if [ "${SIZE_BYTES}" -lt 1048576 ]; then \
+      echo "[AI build] 모델 파일 크기가 비정상적으로 작습니다 (${SIZE_BYTES} bytes)."; \
+      exit 1; \
+    fi
+
 EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
