--- a/apps/backend/src/main/resources/application-prod.yml
+++ b/apps/backend/src/main/resources/application-prod.yml
@@ -5,9 +5,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql:3306/insidemovie?allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: 1234
+    url: jdbc:mysql://${DB_HOST:mysql}:${DB_PORT:3306}/${BACKEND_DB_NAME:insidemovie_backend}?allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:1234}
 
   jpa:
     hibernate:
