chore(env): .gitignore에 환경 변수 파일 패턴 추가 및 불필요한 규칙 제거
- env/*.env 및 env/*.env.example 패턴 추가로 환경 변수 관리 개선
- 중복되거나 불필요한 env/, ENV/ 규칙 제거
- 프로젝트 전반의 환경 변수 파일 관리 일관성 및 유지보수성 강화
- 로컬 및 배포 환경 설정 시 불필요한 충돌 방지 목적

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .env
 .env.*
 !.env.example
+env/*.env
+!env/*.env.example
 
 # Logs
 logs/
@@ -37,7 +39,5 @@ __pycache__/
 *.py[cod]
 .venv/
 venv/
-env/
-ENV/
 .pytest_cache/
 .mypy_cache/
