--- a/apps/ai/environment.yml
+++ b/apps/ai/environment.yml
@@ -32,6 +32,7 @@ dependencies:
       - h11==0.16.0
       - hf-xet==1.1.5
       - huggingface-hub==0.33.4
+      - httpx==0.28.1
       - idna==3.10
       - jinja2==3.1.6
       - kobert-tokenizer==0.1
@@ -45,6 +46,7 @@ dependencies:
       - pydantic-core==2.33.2
       - pydantic-settings==2.10.1
       - pymongo==4.13.2
+      - pytest==8.3.4
       - python-dotenv==1.1.1
       - pyyaml==6.0.2
       - regex==2024.11.6
