--- a/apps/ai/requirements.txt
+++ b/apps/ai/requirements.txt
@@ -14,6 +14,7 @@ greenlet==3.2.3
 h11==0.16.0
 hf-xet==1.1.5
 huggingface-hub==0.33.4
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
 kobert-tokenizer @ git+https://github.com/SKTBrain/KoBERT.git@fcd729f2f4b37858f333597c0782388ada51eb5f#subdirectory=kobert_hf
@@ -28,6 +29,7 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pymongo==4.13.2
 PyMySQL==1.1.1
+pytest==8.3.4
 python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2024.11.6
