fix(frontend): 쿠키 세션 기반 인증/재발급 흐름으로 전환
- axios 인스턴스를 withCredentials 기반으로 고정하고 토큰 저장/주입 로직을 제거함

- 401 응답 시 /api/v1/auth/sessions/refresh 1회 재시도 후 원요청을 재실행하도록 구성함

- 앱 부트스트랩 인증 판정을 /api/v1/users/me 세션 검증으로 전환함

- 로그인/카카오로그인/로그아웃 UI 흐름을 세션 이벤트 기반으로 정리함

- local 프로파일에서 쿠키 secure=false, same-site=Lax를 명시해 로컬 검증을 보완함

--- a/apps/backend/src/main/resources/application-local.yml
+++ b/apps/backend/src/main/resources/application-local.yml
@@ -26,3 +26,8 @@ spring:
   fastapi:
     base-url: "http://localhost:8000"
     url: "http://localhost:8000/recommend/emotion"
+
+jwt:
+  cookie:
+    same-site: Lax
+    secure: false
