--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
     "lint": "eslint .",
+    "contract:check": "node ./scripts/check-contract-alignment.mjs",
     "preview": "vite preview"
   },
   "dependencies": {
