test(monorepo): 임시 계정/온보딩 경로 회귀 검증 보강

--- a/apps/backend/src/test/resources/application-test.yml
+++ b/apps/backend/src/test/resources/application-test.yml
@@ -78,3 +78,8 @@ kakao:
   client:
     id: test-kakao-client-id
     secret: test-kakao-client-secret
+
+demo:
+  accounts:
+    enabled: false
+    seed-enabled: false
