fix(backend): prod 프로필에서도 demo 계정 로그인 API 활성화

--- a/apps/backend/src/main/resources/application-prod.yml
+++ b/apps/backend/src/main/resources/application-prod.yml
@@ -21,3 +21,8 @@ spring:
   fastapi:
     base-url: "http://ai:8000"
     url: "http://ai:8000/recommend/emotion"
+
+demo:
+  accounts:
+    enabled: ${DEMO_ACCOUNTS_ENABLED:true}
+    seed-enabled: ${DEMO_ACCOUNTS_SEED_ENABLED:true}
