feat(backend): KOBIS movieInfo 기반 장르 백필 유스케이스 추가
- KOBIS movieInfo 클라이언트와 장르 매핑 서비스를 추가함

- movieCd(koficId) 기준 movie_genre idempotent 백필 서비스를 구현함

- 원샷 실행 러너와 백필 단위 테스트를 추가함

--- a/apps/backend/src/main/resources/application.yml
+++ b/apps/backend/src/main/resources/application.yml
@@ -64,7 +64,7 @@ springdoc:
 kobis:
   api:
     #영화진흥원 API 키
-    key: ${kobis.api.key}
+    key: ${KOBIS_API_KEY:dev-kobis-api-key}
     # 베이스 URL
     base-url: http://www.kobis.or.kr/kobisopenapi/webservice/rest
 
@@ -78,6 +78,10 @@ scheduler:
 movie:
   seed-enabled: false # 시딩 끝나면 false
   update-enabled: false # TMDB 연동 제거로 업데이트 스케줄러 비활성화
+  genre:
+    backfill:
+      enabled: false
+      dry-run: false
 
 match:
   cron:
