--- a/env/backend.env.example
+++ b/env/backend.env.example
@@ -18,3 +18,4 @@ KAKAO_CLIENT_ID=dev-kakao-client-id
 KAKAO_CLIENT_SECRET=dev-kakao-client-secret
 
 KOBIS_API_KEY=dev-kobis-api-key
+KMDB_API_KEY=dev-kmdb-api-key
