refactor(backend): 리뷰 시드를 고정 fixture 기반으로 전환
- data-backfill 리뷰 경로를 fixture 로더 기반으로 재구성함

- 600개 고정 리뷰 seed 파일을 추가해 재현 가능한 시드 계약을 확정함

- openai/rewrite 설정과 웹 시놉시스 생성 경로를 제거함

- backfill 리포트 항목을 fixtureLoaded/fixtureInvalid 중심으로 정리함

--- a/apps/backend/src/main/resources/application.yml
+++ b/apps/backend/src/main/resources/application.yml
@@ -91,6 +91,10 @@ movie:
     backfill:
       enabled: false
       dry-run: false
+    poster:
+      audit:
+        enabled: false
+        dry-run: true
 
 demo:
   accounts:
@@ -107,7 +111,8 @@ demo:
       include-matches: true
       review:
         target-per-account: 20
-        include-web-fallback: true
+        fixture-path: seed/demo-reviews.v1.jsonl
+        max-content-len: 260
       match:
         closed-target-count: 8
         current-vote-target: 10
